RESOLVED FIXED165206
Log some basic memory usage stats at interesting points in time
https://bugs.webkit.org/show_bug.cgi?id=165206
Summary Log some basic memory usage stats at interesting points in time
Andreas Kling
Reported 2016-11-30 11:18:32 PST
We should have a mechanism that logs basic memory usage stats for the WebContent process at interesting points in time. Let's start with "main frame just started a load" and "main frame just completed a load"
Attachments
Patch (16.55 KB, patch)
2016-11-30 13:44 PST, Andreas Kling
no flags
Patch (16.64 KB, patch)
2016-11-30 14:24 PST, Andreas Kling
no flags
Patch (16.67 KB, patch)
2016-11-30 14:35 PST, Andreas Kling
no flags
Patch (16.78 KB, patch)
2016-11-30 15:11 PST, Andreas Kling
no flags
Patch (17.22 KB, patch)
2016-12-01 01:18 PST, Andreas Kling
no flags
Patch (17.24 KB, patch)
2016-12-01 02:40 PST, Andreas Kling
no flags
Patch (19.74 KB, patch)
2016-12-01 04:16 PST, Andreas Kling
no flags
Patch (19.58 KB, patch)
2016-12-01 05:55 PST, Andreas Kling
no flags
Patch (19.61 KB, patch)
2016-12-01 06:03 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2016-11-30 13:44:08 PST
Andreas Kling
Comment 2 2016-11-30 14:24:08 PST
Andreas Kling
Comment 3 2016-11-30 14:35:34 PST
Andreas Kling
Comment 4 2016-11-30 15:11:15 PST
Andreas Kling
Comment 5 2016-12-01 01:18:13 PST
Example log output: 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] Memory usage info dump at FrameLoadCompleted: 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] javascript_gc_heap_capacity: 5015123 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] document_count: 9 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] virtual_size: 4036255744 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] resident_size: 104173568 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] internal: 55754752 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] phys_footprint: 55918592 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] pagecache_page_count: 0 4577 com.apple.WebKit.WebContent.Development: (WebCore) [com.apple.WebKit.PerformanceLogging] compressed: 0
Andreas Kling
Comment 6 2016-12-01 01:18:33 PST
Andreas Kling
Comment 7 2016-12-01 02:40:39 PST
WebKit Commit Bot
Comment 8 2016-12-01 02:42:31 PST
Attachment 295829 [details] did not pass style-queue: ERROR: Source/WebCore/page/PerformanceLogging.cpp:29: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 9 2016-12-01 04:16:01 PST
Andreas Kling
Comment 10 2016-12-01 05:55:46 PST
Andreas Kling
Comment 11 2016-12-01 06:03:27 PST
Created attachment 295842 [details] Patch Aaargh.
WebKit Commit Bot
Comment 12 2016-12-01 08:15:49 PST
Comment on attachment 295842 [details] Patch Clearing flags on attachment: 295842 Committed r209181: <http://trac.webkit.org/changeset/209181>
WebKit Commit Bot
Comment 13 2016-12-01 08:15:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.