Source/WebCore/page/MainFrame.h
@@ -34,6 +34,7 @@ namespace WebCore {
 class PageConfiguration;
 class PageOverlayController;
 class PaymentCoordinator;
+class PerformanceLogging;
 class ScrollLatchingState;
 class ServicesOverlayController;
 class WheelEventDeltaFilter;
@@ -66,6 +67,8 @@ public:
     PaymentCoordinator& paymentCoordinator() const { return *m_paymentCoordinator; }
 #endif
 
+    PerformanceLogging& performanceLogging() const { return *m_performanceLogging; }
+
 private:
     MainFrame(Page&, PageConfiguration&);
 
@@ -86,6 +89,8 @@ private:
 #if ENABLE(APPLE_PAY)
     std::unique_ptr<PaymentCoordinator> m_paymentCoordinator;
 #endif
+
+    std::unique_ptr<PerformanceLogging> m_performanceLogging;
 };
 
 } // namespace WebCore
