Source/WebCore/platform/Logging.h
@@ -65,6 +65,7 @@ namespace WebCore {
     M(Network) \
     M(NotYetImplemented) \
     M(PageCache) \
+    M(PerformanceLogging) \
     M(PlatformLeaks) \
     M(Plugins) \
     M(PopupBlocking) \
